tests/expectations/parser-expression/expression/literal/group_fail.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', '?', 'as' -- found 'group'
    --> test_0:1:5
     |
   1 | 123 group
     |     ^^^^^
